syntax = "proto3";
option java_multiple_files = true;
package com.medical_office.proto;

service AuthenticationService{
  rpc authenticate (AuthenticationRequest) returns (AuthenticationResponse){}
  rpc validate (ValidateRequest) returns (ValidateResponse){}
}

message AuthenticationRequest{
  //banuiesc ca trebuie luate din baza de date
  string username = 1;
  string password = 2;
}

message AuthenticationResponse{
  string token = 1;
}

message ValidateRequest{
  string valid = 1;
}

message ValidateResponse{
  string valid = 1;
}